# spec-kit-game-dev

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.claude/commands/: _scout.md  brainstorm.md  continue.md  crystallize.md  deep-dive.md  implement.md  init.md  pillars.md  plan.md  playtest.md  roadmap.md  snapshot.md  spec.md  tasks.md
.claude/data/: game-types.md
.claude/skills/godot-gamedev/: SKILL.md
.claude/skills/godot-gamedev/checklists/: pre-implement.md
.claude/skills/godot-gamedev/reference/: nodes.md  scenes.md  scripts.md  signals.md
.claude/skills/pixellab-assets/: SKILL.md
.claude/skills/pixellab-assets/reference/: characters.md  objects.md  tilesets.md
.claude/skills/unity-gamedev/: SKILL.md
.claude/skills/unity-gamedev/reference/: gameobjects.md  prefabs.md  scenes.md  scripts.md  testing.md
.skgd/: config.yaml  state.yaml
.skgd/agents/: architect.md  developer.md  tester.md
.skgd/i18n/: README.md  messages.yaml
.skgd/memory/: constitution.md
.skgd/scripts/: check-mcp.sh  check-prerequisites.sh  common.sh
.skgd/templates/: gdd.md  plan.md  playtest-checklist.md  spec.md
.skgd/templates/game-types/: action-adventure.md  puzzle.md  roguelike.md  rpg.md  shooter.md  strategy.md
docs/: README.md  SYSTEM-PHILOSOPHY.md  skills-integration-strategy.md
docs/diagrams/: files.dot  memory.dot  workflow.dot
docs/tutorial/: 00-overview.md  01-setup.md  02-concept.md  03-planning.md  04-production.md  05-validation.md  06-utilities.md  07-troubleshooting.md  appendix-data-flow.md
src/skgd/: __init__.py  cli.py
src/skgd/templates/common/skills/godot-gamedev/: SKILL.md
src/skgd/templates/common/skills/pixellab-assets/: SKILL.md
src/skgd/templates/en/claude/commands/: ci.md  (+16 more)
src/skgd/templates/en/skgd/: config.yaml  state.yaml
src/skgd/templates/fr/skgd/: config.yaml  state.yaml
(+73 files in other folders)
