[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spec-kit-game-dev"
version = "0.3.6"
description = "AI-first workflow for solo game developers using Claude Code and Unity MCP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Spec Kit Game Dev Contributors" }
]
keywords = ["gamedev", "unity", "ai", "claude", "workflow", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development",
]
dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0",
    "questionary>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "ruff",
]

[project.scripts]
skgd = "skgd.cli:main"

[project.urls]
Homepage = "https://github.com/your-username/spec-kit-game-dev"
Documentation = "https://github.com/your-username/spec-kit-game-dev#readme"
Repository = "https://github.com/your-username/spec-kit-game-dev"
Issues = "https://github.com/your-username/spec-kit-game-dev/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/skgd"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/pyproject.toml",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.ruff]
line-length = 88
target-version = "py38"
